# demo

./: BUILD  WORKSPACE  display.bzl  platform.bzl
constraints/: BUILD  display_constraint.bzl
env_error/: BUILD
jdk/: BUILD.bazel  show-jdk.bzl
local_repo/: BUILD
output/: BUILD  rule.bzl
provider/: BUILD  provider.bzl
toolchain/: BUILD  demo_toolchain.bzl  rule.bzl  test_toolchain.bzl
